tests/fixtures/invalid/list_div_list.py
# Cannot divide List[int] and List[int]
x: float = [1, 2, 3] / [1, 2, 3]
